R&Ds/testdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testkedaqueue
  namespace: default
  labels:
    app: testkedaqueue
spec:
  selector:
    matchLabels:
      app: testkedaqueue
  template:
    metadata:
      labels:
        app: testkedaqueue
    spec:
      containers:
      - name: testkedaqueue
        image: appsvcreg.azurecr.io/kedaqueue:v1.0.0
      imagePullSecrets:
      - name: appsvc-secret
---
