R&Ds/aksauto-ingress-agic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aksauto-ingress-agic
  namespace: aks-workshop-dev
  annotations:    
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
spec:  
  rules:    
  - http:
      paths:
      - path: /frontend
        backend:
          serviceName: frontend
          servicePort: 80
