R&Ds/frontend-ingress-agic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
