R&Ds/captureorder-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: captureorder-network-policy
spec:
  podSelector:
    matchLabels:
      app: captureorder
  policyTypes:
  - Ingress
  # - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
  # egress:
  # - to:
  #   - podSelector:
  #       matchLabels:
  #         app: mongodb
